--- a/MDK-ARM/access_control/access_control.build_log.htm
+++ b/MDK-ARM/access_control/access_control.build_log.htm
@@ -21,20 +21,20 @@ Target DLL:      CMSIS_AGDI.dll V1.33.15.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-C:\Users\dell\Desktop\access_control-master\access_control-master\MDK-ARM\access_control.uvprojx
-Project File Date:  03/12/2025
+C:\Users\dell\Desktop\0313\access_control\MDK-ARM\access_control.uvprojx
+Project File Date:  03/13/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\programFiles\KEIL5\ARM\ARMCC\Bin'
 Build target 'access_control'
-compiling matrx_key.c...
-..\BSP\matrx_key.h(13): warning:  #1-D: last line of file ends without a newline
+compiling main.c...
+../BSP/oled.h(44): warning:  #1-D: last line of file ends without a newline
+  #endif
+../BSP/matrx_key.h(13): warning:  #1-D: last line of file ends without a newline
    
-..\BSP\matrx_key.c(29): warning:  #1-D: last line of file ends without a newline
-  }
-..\BSP\matrx_key.c: 2 warnings, 0 errors
+../Core/Src/main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=8124 RO-data=312 RW-data=40 ZI-data=1744  
+Program Size: Code=8796 RO-data=8008 RW-data=28 ZI-data=2996  
 FromELF: creating hex file...
 "access_control\access_control.axf" - 0 Error(s), 2 Warning(s).
 
@@ -60,7 +60,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
